# RollingBallCpp

./: CMakeLists.txt  OpenCVProjects.sln  OpenCVProjects.vcxproj  OpenCVProjects.vcxproj.filters  README.md
include/: RollingBall.h
src/: RollingBall.cpp  main.cpp
